# InkWatchy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  choose.sh  first.sh  idf_component.yml  menuv2.sh  mic_test.txt  platformio.ini  referenceCode.cpp  writing_rules.md
components/rusty/: CMakeLists.txt  build_rust.sh  ifd_component.yml
components/rusty/crates/general_page/: Cargo.toml  build.rs
components/rusty/crates/set_date/: Cargo.toml  run_test.sh
components/rusty/crates/set_time/: Cargo.toml  build.rs  check.sh
components/rusty/inkrusty/: Cargo.toml  build.rs  cbindgen.toml
components/rusty/inkrusty/.cargo/: config.toml
components/rusty/inkrusty/src/: do_snake.rs  drawing.rs  lib.rs  logs.rs
components/tamp/: .gitignore  CMakeLists.txt  Kconfig  Makefile  common.h  compressor.c  compressor_esp32.cpp  idf_component.yml
components/tamp/private/: copyutil.hpp  tamp_arch.hpp  tamp_search.hpp
components/tamp/tamp/: common.h  compressor.h  decompressor.c
src/: CMakeLists.txt  GSR.ino  Watchy_GSR.cpp  functions.cpp  functions.h  idf_component.yml  main.cpp
src/defines/: bareDefines.h  condition.h  confidential.h  config.h  defines.cpp  defines.h  definesVars.h  localization.h  macros.h  minimalDefines.h  temperature.h
src/defines/languages/: localization_de.h  localization_en.h  localization_it.h  localization_pl.h  localization_sk.h
src/defines/templates/: confidential.h  config.h  gifnoc-template.h  laitnedifnoc-template.h  localization_template.h
src/hardware/: RTC.cpp  RTC.h  axc.cpp  axc.h  battery.cpp  battery.h  buttons.cpp  buttons.h  buttonsInterrupt.cpp  display.cpp  display.h  hardware.cpp  hardware.h  i2c.cpp  i2c.h  sleep.cpp  sleep.h
src/hardware/acc/: acc.cpp  acc.h
src/hardware/acc/lib/: bma456.c
src/hardware/battery/: battery.cpp  battery.h
src/hardware/ble/: bleHost.cpp  bleKeyboard.cpp  bleMain.cpp  bleMain.h
src/hardware/display/: display.cpp  display.h
src/hardware/fs/: confFs.cpp  fontFs.cpp  imgFs.cpp  littlefs.cpp  littlefs.h
src/hardware/i2c/: i2c.cpp  i2c.h
src/hardware/input/: buttons.cpp  buttons.h  buttonsInterrupt.cpp  combinations.cpp  combinations.h
src/hardware/lpCore/: lpCore.cpp  lpCore.h  rtcPins.cpp  rtcPins.h
src/hardware/lpCore/export/: lp_logs.h  lp_rust.h
src/hardware/mcp23018/: mcp23018.cpp  mcp23018.h
src/hardware/motor/: motor.cpp  motor.h
src/hardware/rgb/: rgb.cpp  rgb.h
src/hardware/rtc/: RTC.cpp  rtc.cpp  rtc.h
src/hardware/rtcMem/: rtcMem.cpp  rtcMem.h
src/hardware/sleep/: sleep.cpp  sleep.h
src/hardware/temp/: temp.cpp  temp.h  temperature.h
src/network/: getTimezone.cpp  getTimezone.h  ntp.cpp  ntp.h  weather.cpp  weather.h  wifi.cpp  wifi.h
src/network/ble/: bleMain.h  bleSecurity.cpp
src/network/ble/gadgetbridge/: gadgetbridge.h
src/network/gadgetbridge/: gadgetbridge.cpp  gadgetbridge.h
src/network/wifi/: getTimezone.cpp  wifiLogic.cpp  wifiLogic.h  wifiQuick.cpp  wifiQuick.h  wifiTask.cpp  wifiTask.h
src/network/wifi/wifiThings/: wifiLogic.cpp  wifiLogic.h  wifiTask.cpp  wifiTask.h
src/other/conway/: conway.cpp  conway.h
src/other/debug/: debug.cpp  debug.h  debugMain.cpp  debugMain.h
src/other/debugMain/: debugMain.h
src/other/fontPreview/: fontPreview.cpp
src/other/mcp23018/: mcp23018.cpp  mcp23018.h
src/other/rustExport/: rEControl.cpp  rEGenegic.cpp  rEGeneric.h
src/other/scomTask/: scomTask.cpp  scomTask.h
src/other/watchdogTask/: watchdogTask.cpp  watchdogTask.h
src/other/wifiTool/: wifiTool.cpp  wifiTool.h
src/other/wifiTool/main/: attack.c  attack.h
src/ui/: batteryDebug.cpp  batteryDebug.h  chart.cpp  chart.h  debug.cpp  debug.h  functionsUi.cpp  functionsUi.h  generalDebug.cpp  generalDebug.h  manager.cpp  manager.h  managerFunctions.cpp  managerSwitches.cpp  menu.cpp  menu.h  weatherSwitches.cpp  wifiDebug.cpp  wifiDebug.h
src/ui/appleJoke/: appleJoke.cpp  appleJoke.h  appleSour.cpp  appleSour.h
src/ui/book/: bookSelector.cpp  bookSelector.h  bookUi.cpp  bookUi.h
src/ui/calendar/: calendar.cpp  calendar.h
src/ui/manager/: manager.cpp  manager.h  managerFunctions.cpp  managerSwitches.cpp
src/ui/pinInput/: pinInput.cpp  pinInput.h
src/ui/places/BLEHostScanner/: BLEHostScanner.cpp  BLEHostScanner.h
src/ui/places/accDebug/: acc3D.cpp  accDebug.cpp  accDebug.h
src/ui/places/appleJoke/: appleJoke.cpp  appleJoke.h  appleSour.cpp  appleSour.h
src/ui/places/baiky/: baiky.cpp  baiky.h  sdkconfig-all.Yatchy  sdkconfig-ble-4.Yatchy  sdkconfig.Yatchy  sdkconfig.Yatchy.old  sdkconfig_andnologs.Yatchy
src/ui/places/batteryDebug/: batteryDebug.cpp  batteryDebug.h
src/ui/places/blePeripheral/: blePeripheral.cpp  blePeripheral.h  blePeripheralMenu.cpp  broforce.cpp  towerfall.cpp
src/ui/places/book/: bookSelector.cpp  bookSelector.h  bookUi.cpp  bookUi.h
src/ui/places/calendar/: calendar.cpp  calendar.h
src/ui/places/clockDebug/: clockDebug.cpp  clockDebug.h
src/ui/places/conway/: conway.cpp  conway.h
src/ui/places/credits/: credits.cpp  credits.h
src/ui/places/dailyStepsChartMenu/: dailyStepsChartMenu.cpp  dailyStepsChartMenu.h
src/ui/places/dice/: dice.cpp  dice.h
src/ui/places/errorScreen/: errorScreen.cpp  errorScreen.h
src/ui/places/fontPreview/: fontPreview.cpp  fontPreview.h
src/ui/places/generalDebug/: generalDebug.cpp  generalDebug.h
src/ui/places/gitDebug/: gitDebug.cpp  gitDebug.h
src/ui/places/gotchi/: gotchiPlace.cpp  gotchiPlace.h  gotchiRunner.cpp
src/ui/places/hardwareDebug/: hardwareDebug.cpp  hardwareDebug.h
src/ui/places/heartMonitor/: heartMonitor.cpp  heartMonitor.h
src/ui/places/inkAlarms/: alarmEdit.cpp  alarmEdit.h  alarmEditMenu.cpp  alarmEditMenu.h  (+11 more)
src/ui/pong/: pong.cpp  pong.h
src/ui/setTimeWatch/: setTimeWatch.cpp  setTimeWatch.h
src/ui/settings/: nvsSettings.cpp  nvsSettings.h
src/ui/vault/: vaultUi.cpp  vaultUi.h
src/ui/watchface/: modules.cpp  modules.h  modulesDraw.cpp  watchFaceDraw.cpp  watchFaceDraw.h  watchFaceLogic.cpp  watchFaceLogic.h  watchface.cpp  watchface.h
src/ui/watchfaceModules/: watchFaceModule.cpp  watchFaceModule.h
(+326 files in other folders)
