[package]
name = "inkrusty"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
mallocator = "0.1.0"
embedded-graphics-core = "0.4.0"
slint = { version = "1.8.0", default-features = false, features = ["compat-1-2", "renderer-software", "libm", "unsafe-single-threaded"] }
snake_lib = { git = "https://github.com/Szybet/snake-slint.git", package = "snake_lib" }

[build-dependencies]
slint-build = "1.8.0"

[features]
default = []
none = [] # Placeholder for bash script
debug = []
snake = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# This not
# RUSTFLAGS="-Zlocation-detail=none" cargo +nightly build --release
# because
# rust-lld: error: undefined symbol: __stack_top
# And
# cargo +nightly build --release
# Increases size by a few bytes

# Those don't change anything
debug = 0
debug-assertions = false
incremental = false
overflow-checks = false