[package]
name = "ics-to-json"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parsing
ical = "0.11.0"
chrono = "0.4.38"
deunicode = "1.6.0"
serde = { version = "1.0.210" , features = ["derive"] }
serde_json = "1.0.128"
jsonxf = "1.1"
reqwest = { version = "=0.12.7", features = ["blocking"]}

# Logs
log = "0.4"
env_logger = "0.11.5"

# Arguments
clap = { version = "4.2.1", features = ["derive"] }