[package]
name = "ics-to-json"
version = "0.2.0"
edition = "2021"

[dependencies]
# Parsing
ical = "0.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
deunicode = "1.6.0"
serde = { version = "1.0.210" , features = ["derive"] }
serde_json = "1.0.128"
jsonxf = "1.1"
reqwest = { version = "=0.12.7", features = ["blocking","rustls-tls"]}
#reccuring events import
rrule = "0.11.0"
#Local timezone fix
chrono-tz = "0.8.3"
regex = "1"

# Logs
log = "0.4"
env_logger = "0.11.5"

# Arguments
clap = { version = "4.2.1", features = ["derive"] }
